--- a/CSSorigami.css
+++ b/CSSorigami.css
@@ -5,6 +5,6 @@ body{
 .centre {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
-  color: navy;
+    color: lightgray;
   margin-left: 20px;
 }
